# ableton-ai-control-bridge

./: .gitignore  README.md  pyproject.toml
ableton_bridge/: __init__.py  cli.py  commands.py  runner.py  security.py  server.py  store.py  transport.py
darksco/: __init__.py  cli.py  compiler.py  song_plan.py
docs/: darksco.md  local-setup.md  protocol.md  remote-scripts.md  windows-live11.md
examples/commands/: create_bass_clip.json  neon_basement_ritual.jsonl
examples/darksco/: first-autonomous-track.json  first-autonomous-track.jsonl
max-for-live/: AI-Control-Bridge-Receiver.maxpat  bridge_receiver.js  device-build-guide.md
remote-scripts/: UserConfiguration.txt
tests/: test_commands.py  test_darksco.py  test_v02.py
windows/: doctor.ps1  install.ps1  open-device-source.ps1  start-bridge.ps1
